# prof-xadk3.github.io

./: .createDB.sql  .dox.htmx  .env.py  .gitignore  .gitmodules  .hosts.MASK  .mbdb.json  @xadkeG  BLE.py  CNAME  Cargo.toml  HMAC  HUB.addR.sol.lit  ISH  MX  README.md  UPGRADE.zsh  V6  addr.dol.net  babel.config.js  base.css  bruh.py  build.zsh  cin.gn  client.ts  connect.js  contract.ts  contractor.js  cryptoapisverifydomain.txt  debug.json  deploy.yml  exec.py  fast_storage.sqlite  frame.it.js  goreli.paas.ko.laadu.sol  index.html  index.js  index.sol  index.ts  install_PLATFORM.zsh  (+22 more)
.api/: .i_suck_at_poet_stuff_.py  wiki.en.zip.URL
.injection/: arpEtherJoin.js  index.jsx
.mypy_cache/3.10/: _ast.meta.json  _codecs.meta.json  _collections_abc.meta.json  _ctypes.meta.json  abc.meta.json  array.meta.json  base64.meta.json  builtins.meta.json  codecs.meta.json  contextlib.meta.json  enum.meta.json  env.data.json  env.meta.json  genericpath.meta.json  io.meta.json  mmap.meta.json  pathlib.meta.json  pickle.meta.json  posixpath.meta.json  re.meta.json  sre_compile.meta.json  sre_constants.meta.json  sre_parse.meta.json  subprocess.meta.json  sys.meta.json  types.meta.json  typing.meta.json  typing_extensions.meta.json  whois.data.json  whois.meta.json
.mypy_cache/3.10/_typeshed/: __init__.meta.json
.mypy_cache/3.10/collections/: __init__.meta.json  abc.meta.json
.mypy_cache/3.10/ctypes/: __init__.meta.json
.mypy_cache/3.10/email/: __init__.meta.json  charset.meta.json  contentmanager.meta.json  errors.meta.json  header.meta.json  message.meta.json  policy.meta.json
.mypy_cache/3.10/importlib/: __init__.meta.json  abc.meta.json  machinery.meta.json
.mypy_cache/3.10/importlib/metadata/: __init__.meta.json  _meta.meta.json
.mypy_cache/3.10/os/: __init__.meta.json  path.meta.json
.well-known/: nostr.json  nostr_events_0a4bc33dbb4b63980b586b6d7e76f4d28cfaf2b7c39829df2da789aa2d71efb2_uff.json  robots.txt
.well-known/.api/: .env  scope_[H:ID.NS
.well-known/.git.fake.cake/hash/: chuck.rs  nostr-my-events.1.json
.well-known/.pub.id/: Self Indentification Key naryal2580@gmail.com(CA305F9FC9BB12FA).pub
.well-known/.real-eyes.realize.real-lies~z.sh/: run.sh
ci/: embed.html
effecto/: MOSHED-2023-3-26-14-24-37.webm  MOSHED-2023-3-26-14-24-46.webm  MOSHED-2023-3-26-14-24-58.webm  MOSHED-2023-3-26-14-25-11.webm  convert.ts
ert/: README.md  nick.js  package.json  pnpm-lock.yaml
modules/: qrGen.js
name/0xc9cd0c0e08093cd3e93f89799e65e7bf204b749ea40d89c5bbe25a88191c1183/: build_props.js  eth.sol.WebLN_  events.json  id.pub  package.json  pnpm-lock.yaml  relay.js  tauri.config.json  whois.py
name/0xc9cd0c0e08093cd3e93f89799e65e7bf204b749ea40d89c5bbe25a88191c1183/src/routes/: index.svelte
proc/sock/: index.js  package-lock.json  package.json
public/: index.html
src/: index.ts  main.rs
